tests/NormalTests/paczka1/fuzzy1/70086800.err
Error in line 1: WTtP08v S906 8/,0
Error in line 3: eMceehW1 S44i 63,i
Error in line 5: g4FP3H S445 14,7
Error in line 8: WTtP08v S906 30,3
Error in line 14: S906 S906 5,2
Error in line 15: S906 A67 7,6
Error in line 11: FRLeYhNPECQ S906 40,6
Error in line 22: orXPXQY80CM A67 76,0
Error in line 6: eMceehW1 S445 78,1
Error in line 32: S906 S906 C31,3
Error in line 33: WTtP08v S906 '','
